--- a/BankSystem/appsettings.json
+++ b/BankSystem/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=password;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=2005;"
   }
 }
